# TUF-Luck-A-Secure-3D-Printing-Bootloader

./: LICENSE  README.md
c-verification/: main.c  parse_targets.c
rust-tools/: Cargo.toml  ReadMe  Readme.md  firmware.hash  firmware.sig
rust-tools/keystore/: ed25519_root.json
rust-tools/src/: extract_pubkey.rs  generate_key.rs  main.rs  print_pubkey.rs  setup_tuf_repo.rs  sign_firmware.rs  sign_metadata.rs  test_key.rs
tuf_verification_c/: ReadMe.md  main.c
tuf_verification_c/tuf_verification_c/: Makefile  hash_firmware
tuf_verification_c/tuf_verification_c/firmware_hash/: CMakeLists  Cargo.toml  main.c
tuf_verification_c/tuf_verification_c/firmware_hash/src/: Makefile  ed25519.c  verify.c  verify.h
